# xlsx-schedules-to-photo

./: .gitignore  README.md  Rozklad_23_24.xlsx  Rozklad_24_25.xlsx  main.py  pyproject.toml  run.sh  shell.nix  style.css  test.py
